--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,39 @@
   padding: 0;
 }
 
+.container{
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 1rem;
+}
+
+.productContainer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+a{
+  text-decoration: none;
+}
+
+.ul{
+ flex-basis: 25%;
+ margin: 0 10px;
+}
+
+.image img{
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+}
+
+.content h2{
+ font-size: 18px;
+}
+
+.content p{
+
+}
+
