--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap');
+
 *{
   margin: 0;
   padding: 0;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .container{
-  max-width: 1200px;
+  max-width: 90%;
   margin: auto;
   padding: 0 1rem;
 }
 
+/* ======= header ========= */
+.header{
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  padding: 1rem 0;
+}
+
+.brand_name{
+  font-size: 24px;
+  color: #888888;
+}
+
+/* ======== product components ========= */
 .productContainer{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  padding: 2rem 0 1rem;
 }
 
 a{
@@ -21,21 +37,45 @@ a{
 }
 
 .ul{
- flex-basis: 25%;
- margin: 0 10px;
+  flex-basis: 20%;
+  margin: 0 10px;
+  box-shadow: 0 2px 5px rgb(0 0 0 / 20%);
+  padding: 1rem;
+  min-height: 350px;
+  border-radius: 4px;
+  margin-top: 1rem;
+ 
 }
 
 .image img{
-  width: 50%;
-  height: auto;
-  object-fit: cover;
+  width: 100%;
+  height: 250px;
+  object-fit: contain;
 }
 
 .content h2{
- font-size: 18px;
+ font-size: 16px;
+ color: #000000;
+ transition: 0.2s;
+}
+
+.content h2:hover{
+  opacity: 0.7;
 }
 
 .content p{
-
+ font-weight: 600;
+ color: green;
+ margin: 5px 0;
 }
 
+.content h6{
+  font-size: 14px;
+  color: #ccc;
+}
+
+@media screen and (max-width: 400px) {
+  .ul{
+    flex-basis: 100%;
+  }
+}
